--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,8 +70,14 @@ add_executable("${CMAKE_PROJECT_NAME}" src/main.cpp
         Includes/Entity/Player/StateManager.hpp
         Src/Entity/Player/States/State.cpp
         Includes/Entity/Player/States/State.hpp
+        Includes/Entity/Player/States/Idle.cpp
+        Includes/Entity/Player/States/Idle.hpp
         Includes/Entity/Player/States/Walking.cpp
         Includes/Entity/Player/States/Walking.hpp
+        Includes/Entity/Player/States/Jumping.cpp
+        Includes/Entity/Player/States/Jumping.hpp
+        Includes/Entity/Player/States/Running.cpp
+        Includes/Entity/Player/States/Running.hpp
 )
 
 if (PRODUCTION_BUILD)
