Adding render component to each entity. Position, velocity and acceleration are now members of each entity.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,8 @@ add_executable("${CMAKE_PROJECT_NAME}" Src/main.cpp
         Includes/Entity/Player/States/Attacking.hpp
         Src/Entity/Player/States/Winking.cpp
         Includes/Entity/Player/States/Winking.hpp
+        Includes/Entity/RenderComponent.cpp
+        Includes/Entity/RenderComponent.hpp
 )
 
 if (PRODUCTION_BUILD)
